tests/compile-fail/attr_on_type.rs

extern crate auto_impl;
use auto_impl::auto_impl;


#[auto_impl(&, &mut)]
type Baz = String;
