tests/compile-fail/attr_on_type.stderr
error: couldn't parse trait item
 --> tests/compile-fail/attr_on_type.rs:4:1
  |
4 | #[auto_impl(&, &mut)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: expected `trait`
  = note: the #[auto_impl] attribute can only be applied to traits!
  = note: this error originates in the attribute macro `auto_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
